--- a/exam-vue/index.html
+++ b/exam-vue/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Vue + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="background-color: #f3f4f6"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
